[package]
name = "moonlight"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-htmx = "0.6.0"
maud = { version = "0.26.0", features = ["axum"]}
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"]}
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
